--- a/index.html
+++ b/index.html
@@ -7,17 +7,32 @@
               content="width=device-width, initial-scale=1.0">
         <title>Liquid</title>
         <link rel="stylesheet"
-              href="build/index.css">
+              href="build/index.min.css">
     </head>
 
     <body>
-        <div id="root">
-            <header>
-                <h1>Liquid</h1>
+        <div id="root"
+             class="page">
+            <header class="header">
+                <h2>liquid.</h2>
+
             </header>
-            <aside>
-                <nav>
-                    <ul>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <aside class="aside">
+                <nav class="navigation">
+                    <ul class="navigation__list">
                         <li>
                             <a href="#">Home</a>
                         </li>
@@ -30,10 +45,32 @@
                     </ul>
                 </nav>
             </aside>
-            <main>
-                <div id="app"></div>
+            <main class="main">
+                <header class="header">
+                    <h1>Liquid</h1>
+                </header>
+                <p>Set up shortcuts for words or phrases</p>
+                With text replacement, you can set shortcuts to automatically become longer phrases or words. When you
+                enter the shortcut in a text field, your chosen word or phrase automatically replaces it. For example,
+                you could type "GM" and "Good morning" would automatically replace it.</p>
+
+                <p> To manage your text replacements, tap Settings > General > Keyboard > Text Replacement.</p>
+
+                <p>Add a text replacement</p>
+                <p>In the Settings app, tap General > Keyboard > Text Replacement.</p>
+                <footer class="footer">
+                    <div>
+                        <a href="#">liquid</a>
+                    </div>
+                </footer>
             </main>
-            <footer>
+            <footer class="footer">
+                <div>
+                    <a href="#">liquid</a>
+                </div>
+                <div>
+                    <a href="#">liquid</a>
+                </div>
                 <div>
                     <a href="#">liquid</a>
                 </div>
